# RizzLang

./: .gitignore  CMakeLists.txt  README.md  dockerfile
.github/workflows/: build.yml  release.yml
sample/: demo.rizz
src/: ast.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  rizz  token.hpp
